# snap_to_txt

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
src/: __init__.py  make_shot.py  structure.py
src/snap_to_txt/: __init__.py  cli.py  structure.py
